k8s.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
  - host: guestbook.sf.okteto.net
    http:
      paths:
      - path: /
        backend:
          serviceName: guestbook
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  labels:
    app.kubernetes.io/name: "guestbook"
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: guestbook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app.kubernetes.io/name: "guestbook"
spec:
  replicas: 1
  strategy:
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
        - name: guestbook
          image: ramiro/crossplane-community-day
          ports:
            - containerPort: 8080
